# niftyfetcher

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
niftyfetcher/: main.py
