[project]
name = "niftyfetcher"
version = "0.1.3"
description = "📈 A CLI tool to fetch historical OHLC data for stocks using Upstox API"
authors = [{ name = "Yashvardhan Goel", email = "yash2002@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["stock", "market", "data", "trading", "upstox", "cli", "nifty", "historical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "typer[all] >=0.9.0",
    "pandas >=1.3.0",
    "requests >=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yash2002vardhan/niftyfetcher"
Repository = "https://github.com/yash2002vardhan/niftyfetcher"
Issues = "https://github.com/yash2002vardhan/niftyfetcher/issues"

[project.scripts]
niftyfetcher = "niftyfetcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["niftyfetcher"]
